# canon-engine

./: .env.example  .gitignore  CANON_ENGINE_MASTER_MANUAL.md  README.md  canon_engine.md  canonchanges.md  cursorrulescanonengine.md  main.py  narrative_saga_framework.md  pyproject.toml  requirements.txt  resolution_layout_fix_spec.md  roadmap.md  run_server.py  ui_guardrails.md  ui_system.md
.hermes/plans/: full-rebuild.md
canon_engine/: __init__.py  __main__.py  config.py  constants.py  engine.py  memory.py  narrator.py  openai_client.py  state_manager.py
canon_engine/adapters/: __init__.py
canon_engine/api/: __init__.py  server.py
canon_engine/core/: action_suggestions.py  admin.py  backstory.py  boss.py  character_session.py  combat.py  combat_math.py  command_parser.py  crafting.py  damage_types.py  death.py  dev_mode.py  economy.py  elements.py  encounter_bridge.py  enemy_ai.py  equip_suggest.py  factions.py  handbook.py  inventory.py  item_lore.py  journal.py  leveling.py  lore_codex.py  memory_warm.py  minigames.py  narrator.py  narrator_apply.py  narrator_quests.py  npc.py  party.py  quests.py  rarity.py  rebirth.py  recovery.py  saga.py  (+13 more)
content/: bosses.json  companion_banter.json  craft_catalog.json  enemies.json  factions.json  genre_collisions.json  item_lore.json  lorebook.json  merchants.json  monster_parts.json  npcs_seed_templates.json  quest_templates.json  recipes.json  skills_trees.json  story_templates.json  terrain_features.json  traps.json  worldgen_tables.json
core/: __init__.py  command_parser.py
tests/: test_state_manager.py
(+75 files in other folders)
